--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <meta property="og:description" content="AI-powered autonomous robots for semiconductor fabs and industrial facilities. Flexible inspection solutions that reach where humans can't." />
     <meta property="og:type" content="website" />
   <!-- Open graph / Twitter image removed (previously pointed to external Lovable assets) -->
-  <meta name="twitter:card" content="summary_large_image" />
+   <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
+    <meta name="twitter:card" content="summary_large_image" />
   </head>
 
   <body>
