Refinements. Ready for V1

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hephabots | Autonomous Inspection Robots</title>
-    <meta name="description" content="AI-powered autonomous robots for semiconductor fabs and industrial facilities. Flexible inspection solutions that reach where humans can't." />
+    <title>Hephabots | AI-Driven Inspection and Monitoring Robots</title>
+    <meta name="description" content="Compact, intelligent robots with modular sensors for continuous inspection, contamination monitoring, and preventive maintenance across semiconductor and industrial facilities." />
     <meta name="author" content="Hephabots" />
 
-    <meta property="og:title" content="Hephabots | Autonomous Inspection Robots" />
-    <meta property="og:description" content="AI-powered autonomous robots for semiconductor fabs and industrial facilities. Flexible inspection solutions that reach where humans can't." />
+    <meta property="og:title" content="Hephabots | AI-Driven Inspection and Monitoring Robots" />
+    <meta property="og:description" content="Autonomous robots combining AI and adaptable sensing to enhance inspection precision, reduce downtime, and support predictive maintenance." />
     <meta property="og:type" content="website" />
   <!-- Open graph / Twitter image removed (previously pointed to external Lovable assets) -->
    <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
